<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="@string/pref_stream_key"
    android:title="@string/pref_stream_title">
    <PreferenceCategory android:title="@string/home">
        <SwitchPreference
            app:key="@string/pref_use_unified_stream_key"
            app:defaultValue="@bool/pref_use_unified_stream_default_value"
            app:title="@string/pref_use_unified_stream_title"
            app:summaryOn="@string/pref_use_unified_stream_summary_on"
            app:summaryOff="@string/pref_use_unified_stream_summary_off" />
        <SwitchPreference
            app:key="@string/pref_include_directed_posts_key"
            app:defaultValue="@bool/pref_include_directed_posts_default_value"
            app:title="@string/pref_include_directed_posts_title"
            app:summary="@string/pref_include_directed_posts_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/mentions">
        <SwitchPreference
            app:key="@string/pref_hide_copy_mentions_key"
            app:defaultValue="@bool/pref_hide_copy_mentions_default_value"
            app:title="@string/pref_hide_copy_mentions_title"
            app:summary="@string/pref_hide_copy_mentions_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_loading">
        <io.pnut.gamma.presentation.view.SeekBarPreferenceMod
            app:title="@string/pref_loading_size"
            app:key="@string/pref_loading_size_key"
            app:defaultValue="@integer/pref_loading_size_default_value"
            app:min="10"
            android:max="200"
            app:adjustable="true"
            app:showSeekBarValue="true"
            app:summary="@string/pref_loading_size_desc"
            app:seekBarIncrement="@integer/pref_loading_size_step" />
        <io.pnut.gamma.presentation.view.SeekBarPreferenceMod
            app:title="@string/pref_auto_pager"
            app:key="@string/pref_auto_pager_key"
            app:defaultValue="@integer/auto_pager_default_value"
            app:min="0"
            android:max="100"
            app:adjustable="true"
            app:showSeekBarValue="true"
            app:summary="@string/pref_auto_pager_desc"
            app:seekBarIncrement="@integer/pref_auto_pager_step" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/cache">
        <io.pnut.gamma.presentation.view.SeekBarPreferenceMod
            app:title="@string/pref_cache_size_title"
            app:key="@string/pref_cache_size_key"
            app:defaultValue="@integer/pref_cache_size_default_value"
            app:min="0"
            android:max="500"
            app:adjustable="true"
            app:showSeekBarValue="true"
            app:summary="@string/pref_cache_size_desc"
            app:seekBarIncrement="@integer/pref_cache_size_step" />
        <Preference
            app:title="@string/pref_clear_stream_cache_title"
            app:key="@string/pref_clear_stream_cache_key" />
        <Preference
            app:title="@string/pref_clear_glide_cache_title"
            app:key="@string/pref_clear_glide_cache_key" />
    </PreferenceCategory>
</PreferenceScreen>