<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="@string/pref_behavior_key"
    android:title="@string/behavior">
    <PreferenceCategory android:title="@string/pref_header_general">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="@string/pref_username_autocomplete_key"
            app:summary="@string/pref_username_autocomplete_summary"
            app:title="@string/pref_username_autocomplete_title" />
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="@string/pref_suggest_user_follows_key"
            app:summary="@string/suggest_user_follows_description"
            app:title="@string/suggest_user_follows" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/posts">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:summary="@string/avatar_swipe_desc"
            app:key="@string/avatar_swipe_key"
            app:title="@string/avatar_swipe" />
    </PreferenceCategory>
</PreferenceScreen>
