<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="@string/pref_settings_root_key"
    android:title="@string/settings">
    <PreferenceCategory android:key="@string/pref_account_header_title_key">
        <Preference
            android:fragment="io.pnut.gamma.presentation.activity.SettingsActivity$AccountPreferenceFragment"
            android:icon="@drawable/ic_person_black_24dp"
            app:key="@string/pref_account_key"
            android:title="@string/pref_header_account" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="@string/pref_general_header_title_key"
        android:title="@string/pref_header_general">
        <Preference
            android:fragment="io.pnut.gamma.presentation.activity.SettingsActivity$StreamPreferenceFragment"
            android:icon="@drawable/ic_list_black_24dp"
            android:key="@string/pref_stream_key"
            android:title="@string/pref_stream_title" />
        <Preference
            android:fragment="io.pnut.gamma.presentation.activity.SettingsActivity$BehaviorPreferenceFragment"
            android:icon="@drawable/ic_reply_black_24dp"
            android:key="@string/pref_behavior_key"
            android:title="@string/behavior" />
        <Preference
            android:fragment="io.pnut.gamma.presentation.activity.SettingsActivity$DisplayPreferenceFragment"
            android:icon="@drawable/ic_palette_black_24dp"
            android:key="@string/pref_display_key"
            android:title="@string/display" />
    </PreferenceCategory>
    <PreferenceCategory>
        <Preference
            android:key="@string/pref_version_key"
            android:title="@string/gamma_version" />
        <Preference
            android:key="@string/pref_license_key"
            android:title="@string/license" />
        <Preference
            android:key="pref_privacy_policy_key"
            android:title="@string/privacy_policy" />
        <Preference
            android:key="pref_child_safety_key"
            android:title="@string/child_safety_standards" />
    </PreferenceCategory>
</PreferenceScreen>
