<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/homeGroup"
        android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:checked="true"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/global"
            android:icon="@drawable/ic_public_black_24dp"
            android:title="@string/global" />
        <item
            android:id="@+id/explorePosts"
            android:icon="@drawable/ic_explore_black_24dp"
            android:title="@string/explore_posts" />
    </group>

    <group
        android:id="@+id/pmGroup"
        android:checkableBehavior="single"
        android:orderInCategory="200">
        <item
            android:id="@+id/privateMessages"
            android:icon="@drawable/ic_mail_black_24dp"
            android:title="@string/private_messages" />
    </group>

    <group
        android:id="@+id/channelsGroup"
        android:checkableBehavior="single"
        android:menuCategory="secondary"
        android:orderInCategory="250">
        <item
            android:id="@+id/channels"
            android:icon="@drawable/ic_forum_black_24dp"
            android:title="@string/chat_rooms" />
        <item
            android:id="@+id/exploreRooms"
            android:icon="@drawable/ic_explore_black_24dp"
            android:title="@string/explore_rooms" />
    </group>

    <group
        android:id="@+id/other"
        android:menuCategory="system">
        <item
            android:id="@+id/suggestedUsers"
            android:icon="@drawable/ic_person_add_black_24dp"
            android:title="@string/pref_button_suggested_users"
            android:visible="false" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
    </group>
</menu>