<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragment.SearchFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/searchAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorSurface"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/bg_search_toolbar"
            android:elevation="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_scrollFlags="scroll|enterAlways"
            app:menu="@menu/search"
            app:navigationIcon="@drawable/ic_arrow_back_white_24dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipChildren="false">

                <EditText
                    android:id="@+id/keywordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="88dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/keyword_search"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    tools:ignore="Autofill" />

                <ImageView
                    android:id="@+id/searchTypeButton"
                    android:layout_width="@dimen/size_normal_icon"
                    android:layout_height="@dimen/size_normal_icon"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="@dimen/margin_regular"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/search"
                    android:focusable="true"
                    app:tint="@color/toolbarIcon" />

                <ImageView
                    android:id="@+id/clearButton"
                    android:layout_width="@dimen/size_normal_icon"
                    android:layout_height="@dimen/size_normal_icon"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="56dp"
                    android:clickable="true"
                    android:contentDescription="@string/clear_text"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_close_black_24dp"
                    app:tint="@color/toolbarIcon" />
            </FrameLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/searchContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
